Working on PID editing and determining location of bug

--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -3,8 +3,8 @@
         \paragraph
         \gls{LQR} is a popular optimal control technique which has been shown to be an effective swing-damping controller for multirotors with a suspeneded payload 
         \cite{Erasmus2020} \cite{Slabber2020} \cite{Us2019}.
-        LQG combines this optimal control technique with a full-state estimator when all the satets cannot be measured \cite{Li2016}.
-        An LQG was effectiveley used by \cite{Slabber2020} for swing-damping control of a multirotor and suspended payload system.
+        \gls{LQG} combines this optimal control technique with a full-state estimator when all the satets cannot be measured \cite{Li2016}.
+        An \gls{LQG} was effectiveley used by \cite{Slabber2020} for swing-damping control of a multirotor and suspended payload system.
         An \gls{LQR} for North velocity control with full-state feedback is presented in this section. 
         This controller structure can be duplicated for East veloicty control.
         
