--- a/glossary.tex
+++ b/glossary.tex
@@ -42,3 +42,8 @@
 \newacronym{SITL}{SITL}{Software-in-the-Loop}
 \newacronym{HITL}{HITL}{Hardware-in-the-Loop}
 \newacronym{ROS}{ROS}{Robot Operating System}
+
+\newacronym{LPF}{LPF}{Low Pass Filter}
+\newacronym{LQG}{LQG}{Linear Quadratic Gaussian}
+
+
